--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="saf">#f0a729</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="saf">#f0a729</color>
+    <color name="red">#eb1e0c</color>
+    <color name="sec">#fed8b1</color>
+    <color name="option">#fae2c5</color>
 </resources>
