--- a/app/src/main/res/layout/activity_mobile_login.xml
+++ b/app/src/main/res/layout/activity_mobile_login.xml
@@ -54,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
-                    android:inputType="text"
+                    android:inputType="phone"
                     android:textAlignment="center"
                     android:drawablePadding="12dp"
                     android:hint="Phone" />
