--- a/app/src/main/res/layout/activity_verify_login_otp.xml
+++ b/app/src/main/res/layout/activity_verify_login_otp.xml
@@ -5,8 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/verifyOtpLayout"
     android:background="@color/saf"
-    tools:context=".verifyLoginOtp">
+    tools:context=".verifyLoginOtp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
