--- a/app/src/main/res/layout/activity_first_details.xml
+++ b/app/src/main/res/layout/activity_first_details.xml
@@ -123,15 +123,33 @@
                     android:hint="Age" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <CheckBox
-                android:id="@+id/termsAndCondition"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="By clicking on that you are agree with our terms and conditions"
-                android:textSize="10sp">
+                android:orientation="horizontal">
 
-            </CheckBox>
+                <TextView
+                    android:id="@+id/termsAndCondition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="13dp"
+                    android:text="By Submit your details you are agree with our "
+                    android:textColor="@color/black"
+                    android:textSize="10sp">
+
+                </TextView>
+                <TextView
+                    android:id="@+id/ClickTermsAndCondition"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="-5dp"
+                    android:text="terms and conditions"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="9sp">
+
+                </TextView>
+            </LinearLayout>
 
             <TextView
                 android:background="@drawable/btn_bg"
