--- a/app/src/main/res/layout/activity_first_details.xml
+++ b/app/src/main/res/layout/activity_first_details.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".firstDetails">
+    tools:context=".firstDetails"
+    android:id="@+id/firstDetailsLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="250dp"
             android:background="@color/saf"
             android:orientation="vertical">
 
@@ -50,15 +51,14 @@
                 android:layout_height="90dp"
                 android:src="@drawable/download"
                 android:layout_gravity="center_horizontal">
-
             </de.hdodenhof.circleimageview.CircleImageView>
 
             <TextView
                 android:id="@+id/ImageText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="103dp"
-                android:text="Upload Image Here" />
+                android:layout_marginLeft="123dp"
+                android:text="Upload Image" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -68,13 +68,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/nameIP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:inputType="text"
-                    android:textAlignment="center"
                     android:drawablePadding="12dp"
-                    android:hint="name" />
+                    android:hint="Name" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -88,19 +88,28 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <CheckBox
-                        android:id="@+id/male"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Male">
-                    </CheckBox>
+                    <RadioGroup
+                        android:id="@+id/sexRadioGrp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                    <CheckBox
-                        android:id="@+id/female"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="female">
-                    </CheckBox>
+                        <RadioButton
+                            android:id="@+id/male"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Male"
+                            android:layout_marginRight="25dp">
+                        </RadioButton>
+
+                        <RadioButton
+                            android:id="@+id/female"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Female">
+                        </RadioButton>
+
+                    </RadioGroup>
 
                 </LinearLayout>
 
@@ -113,52 +122,80 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/yobIP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:inputType="number"
-                    android:maxLength="3"
-                    android:textAlignment="center"
+                    android:maxLength="4"
                     android:drawablePadding="12dp"
-                    android:hint="Age" />
+                    android:hint="Year of Birth" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/termsAndCondition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="13dp"
-                    android:text="By Submit your details you are agree with our "
+                    android:text="By logging in you agree with our "
                     android:textColor="@color/black"
-                    android:textSize="10sp">
+                    android:textSize="11sp">
 
                 </TextView>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+
                 <TextView
-                    android:id="@+id/ClickTermsAndCondition"
-                    android:layout_width="match_parent"
+                    android:id="@+id/clickTermsAndCondition"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="-5dp"
-                    android:text="terms and conditions"
-                    android:textColor="@color/black"
+                    android:text="      terms and conditions"
+                    android:textColor="@color/red"
                     android:textStyle="bold"
-                    android:textSize="9sp">
+                    android:textSize="10sp">
+                </TextView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="13dp"
+                    android:text="and  "
+                    android:textColor="@color/black"
+                    android:textSize="11sp">
 
                 </TextView>
+
+                <TextView
+                    android:id="@+id/clickPrivacyPolicy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="-5dp"
+                    android:text="privacy policy"
+                    android:textColor="@color/red"
+                    android:textStyle="bold"
+                    android:textSize="9sp">
+                </TextView>
+                </LinearLayout>
             </LinearLayout>
 
             <TextView
                 android:background="@drawable/btn_bg"
                 android:gravity="center"
                 android:textColor="@color/black"
-                android:id="@+id/priority"
+                android:id="@+id/submitNSA"
                 android:layout_width="match_parent"
                 android:layout_marginTop="16dp"
-                android:text="submit"
+                android:text="Submit"
                 android:layout_height="40dp"
                 >
 
