--- a/app/src/main/res/layout/activity_verify_login_otp.xml
+++ b/app/src/main/res/layout/activity_verify_login_otp.xml
@@ -41,10 +41,20 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:gravity="center"
-            android:text="enter otp we sent in your phone number"
+            android:text="Enter otp we sent in your phone number"
             android:textColor="@color/black"
             android:textSize="16sp">
         </TextView>
+
+
+            <TextView
+                android:id="@+id/textMobile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp">
+            </TextView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -52,23 +62,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textMobile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="12sp">
-            </TextView>
-
-            <TextView
-                android:id="@+id/BackToLoginText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginHorizontal="2dp"
                 android:gravity="center"
-                android:text="Is your Number or You Want to change"
+                android:text=" OR "
                 android:textColor="@color/black"
                 android:textSize="12sp">
             </TextView>
@@ -80,8 +79,8 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="center"
-                android:text="Go Back"
-                android:textColor="@color/black"
+                android:text="change number"
+                android:textColor="@color/red"
                 android:textStyle="bold"
                 android:textSize="12sp">
             </TextView>
@@ -90,6 +89,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="center"
@@ -107,7 +107,7 @@
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                tools:ignore="LabelFor">
+                tools:ignore="SmallSp">
             </EditText>
 
             <EditText
