--- a/app/src/main/res/layout/activity_five_sleeping.xml
+++ b/app/src/main/res/layout/activity_five_sleeping.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textAlignment="center"
-    tools:context=".firstBio1">
+    tools:context=".sleeping">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:orientation="vertical"
         android:background="@color/saf"
-        android:orientation="vertical">
+        >
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,15 +19,15 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="What type of person you are?"
+                android:id="@+id/textView3"
+                android:layout_width="259dp"
+                android:layout_height="47dp"
+                android:text="Sleeping Habit"
                 android:textStyle="bold"
-                android:gravity="center"
-                android:textSize="24dp"
-                android:fontFamily="sans-serif-black"
                 android:textColor="@color/black"
+                android:gravity="center"
+                android:textSize="26dp"
+                android:fontFamily="sans-serif-black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,34 +43,36 @@
 
 
         <TextView
-            android:id="@+id/introvert"
+            android:id="@+id/earlyBird"
             android:background="@drawable/option_btn"
+            android:layout_marginTop="70dp"
+            android:layout_width="270dp"
+            android:layout_height="51dp"
             android:layout_gravity="center"
-            android:textAlignment="center"
             android:gravity="center"
-            android:layout_width="310dp"
-            android:layout_height="70dp"
-            android:text="Introvert"
+            android:textSize="24dp"
             android:textStyle="bold"
-            android:textSize="28dp"
             android:textColor="@color/black"
             android:fontFamily="sans-serif-black"
-            android:layout_marginTop="50dp"
-            />
+            android:text="Early Bird"
+            android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/extrovert"
+            android:id="@+id/nightOwl"
             android:background="@drawable/option_btn"
+            android:layout_marginTop="30dp"
+            android:layout_width="270dp"
+            android:layout_height="51dp"
             android:layout_gravity="center"
-            android:textAlignment="center"
             android:gravity="center"
-            android:layout_width="310dp"
-            android:layout_height="70dp"
-            android:text="Extrovert"
+            android:textSize="22dp"
             android:textStyle="bold"
-            android:textSize="28dp"
             android:textColor="@color/black"
             android:fontFamily="sans-serif-black"
-            android:layout_marginTop="50dp"/>
+            android:text="Night-Owl"
+            android:textAlignment="center"/>
+
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
