--- a/app/src/main/res/layout/activity_six_food.xml
+++ b/app/src/main/res/layout/activity_six_food.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textAlignment="center"
-    tools:context=".firstBio1">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".food">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:orientation="vertical"
         android:background="@color/saf"
-        android:orientation="vertical">
-
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="What type of person you are?"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textSize="24dp"
+                android:id="@+id/textView3"
+                android:layout_width="259dp"
+                android:layout_height="47dp"
                 android:fontFamily="sans-serif-black"
+                android:gravity="center"
+                android:text="Food Habit"
                 android:textColor="@color/black"
+                android:textSize="26dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.669" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
@@ -43,34 +42,36 @@
 
 
         <TextView
-            android:id="@+id/introvert"
+            android:id="@+id/vegetarian"
             android:background="@drawable/option_btn"
+            android:layout_marginTop="70dp"
+            android:layout_width="270dp"
+            android:layout_height="51dp"
             android:layout_gravity="center"
-            android:textAlignment="center"
             android:gravity="center"
-            android:layout_width="310dp"
-            android:layout_height="70dp"
-            android:text="Introvert"
+            android:textSize="24dp"
             android:textStyle="bold"
-            android:textSize="28dp"
             android:textColor="@color/black"
             android:fontFamily="sans-serif-black"
-            android:layout_marginTop="50dp"
-            />
+            android:text="Vegetarian"
+            android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/extrovert"
+            android:id="@+id/nonVegetarian"
             android:background="@drawable/option_btn"
+            android:layout_marginTop="30dp"
+            android:layout_width="270dp"
+            android:layout_height="51dp"
             android:layout_gravity="center"
-            android:textAlignment="center"
             android:gravity="center"
-            android:layout_width="310dp"
-            android:layout_height="70dp"
-            android:text="Extrovert"
+            android:textSize="22dp"
             android:textStyle="bold"
-            android:textSize="28dp"
             android:textColor="@color/black"
             android:fontFamily="sans-serif-black"
-            android:layout_marginTop="50dp"/>
+            android:text="Non-Vegetarian"
+            android:textAlignment="center"/>
+
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
