Addes activity_eight_home_screen.xml and added card view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="sec">#fed8b1</color>
     <color name="option">#fae2c5</color>
     <color name="btnColor">#E7F0A729</color>
+    <color name="blue">#4959C1</color>
 </resources>
