Revert "Change in activity_three_smoker.xml file."
This reverts commit f47530ecb0b68de9a5aec83cb921de2961ebc5ec.

--- a/app/src/main/res/layout/activity_verify_login_otp.xml
+++ b/app/src/main/res/layout/activity_verify_login_otp.xml
@@ -34,7 +34,6 @@
             android:textStyle="bold">
         </TextView>
 
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,9 +43,11 @@
             android:gravity="center"
             android:text="Enter otp we sent in your phone number"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp">
+        </TextView>
 
-        <TextView
+
+            <TextView
                 android:id="@+id/textMobile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,8 +59,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
