--- a/app/src/main/res/layout/activity_three_smoker.xml
+++ b/app/src/main/res/layout/activity_three_smoker.xml
@@ -30,19 +30,22 @@
         android:layout_marginTop="250dp">
 
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/smokerTextview"
                 android:layout_width="270dp"
                 android:layout_height="51dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="100dp"
                 android:background="@drawable/option_btn"
                 android:fontFamily="sans-serif-black"
                 android:gravity="center"
                 android:text="Smoker"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textSize="24dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/nonsmokerTextview"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,21 +59,20 @@
                 android:layout_width="270dp"
                 android:layout_height="51dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="228dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginBottom="240dp"
                 android:background="@drawable/option_btn"
                 android:fontFamily="sans-serif-black"
                 android:gravity="center"
                 android:text="None smoker"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="22sp"
+                android:textSize="22dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent" />
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
