Added Card for use in recycleView with name of row_content.xml and added button as textview to fatch the data whatever user input while login.

--- a/app/src/main/res/layout/activity_two_field_of_study.xml
+++ b/app/src/main/res/layout/activity_two_field_of_study.xml
@@ -61,14 +61,22 @@
                 app:layout_constraintVertical_bias="0.324" />
 
             <TextView
-                android:id="@+id/study_submit_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/submitBtn"
+                android:layout_width="204dp"
+                android:layout_height="52dp"
+                android:layout_gravity="center"
+                android:background="@drawable/btn_bg"
+                android:gravity="center"
                 android:text="Submit"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextStudyDetail" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextStudyDetail"
+                app:layout_constraintVertical_bias="0.237">
+
+            </TextView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
