Added document verification page

--- a/app/src/main/res/layout/row_content.xml
+++ b/app/src/main/res/layout/row_content.xml
@@ -40,8 +40,8 @@
                 android:id="@+id/NameOFUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="t2om and jerry"
+                android:layout_marginLeft="12dp"
+                android:text="tom and jerry"
                 android:textColor="@color/black"
                 android:textSize="22dp"
                 android:textStyle="bold"
@@ -54,7 +54,7 @@
                 android:id="@+id/UserAge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="8dp"
                 android:text="21"
                 android:textColor="@color/black"
@@ -69,7 +69,7 @@
                 android:id="@+id/UserLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="8dp"
                 android:text="vadodara"
                 android:textColor="@color/black"
